<resources>
    <string name="app_name">GroupsPad</string>
    <string name="yukleniyor">Yükleniyor...</string>
    <string name="todo">TODO</string>
    <string name="groupspad">/@groupspad</string>
    <string name="groupspad_uygulamas_kullan_c_lar_na_d_nyaca_pop_ler_mesajla_ma_uygulamalar_nda_yelerinin_verdi_i_grup_adresleriyle_grup_kapasitesini_daha_ok_ki_iye_ula_t_rmay_sa_layan_ve_bu_s_reci_kolayla_t_ran_bir_ortamd_r_bunun_yan_nda_kullan_c_lar_n_n_isteklerinin_daha_abuk_ve_daha_kolay_ula_mas_n_sa_layan_bir_hizmet_sunmaktad_r_yelerinin_payla_t_grup_adreslerini_istedi_i_vakit_g_ncellemeyi_ve_hatta_silmeyi_de_sunmaktad_r_2021_y_l_nda_kurulmu_olup_t_m_haklar_sakl_d_r_about">GroupsPad uygulaması, kullanıcılarına dünyaca popüler mesajlaşma uygulamalarında, üyelerinin verdiği grup adresleriyle grup kapasitesini daha çok kişiye ulaştırmayı sağlayan ve bu süreci kolaylaştıran bir ortamdır. Bunun yanında kullanıcılarının isteklerinin daha çabuk ve daha kolay ulaşmasını sağlayan bir hizmet sunmaktadır. Üyelerinin paylaştığı grup adreslerini istediği vakit güncellemeyi ve hatta silmeyi de sunmaktadır. 2021 yılında kurulmuş olup tüm hakları saklıdır.</string>
    <string name="mevcut_sifre_changepassword">Mevcut Şifre</string>
    <string name="yeni_sifre_changepassword">Yeni Şifre</string>
    <string name="yeni_sifre_onay_changepassword">Yeni Şifre Onay</string>
    <string name="kaydet_changepassword">Kaydet</string>
    <string name="olusturdugun_gruplar_editmygroups">Oluşturduğun gruplar</string>
    <string name="ad_soyad_editprofile">Ad Soyad</string>
    <string name="e_posta_editprofile">E-Posta</string>
    <string name="kaydet_editprofile">Kaydet</string>
    <string name="ad_soyad_feedback">Ad Soyad</string>
    <string name="e_posta_feedback">E-Posta</string>
    <string name="mesajiniz_feedback">Mesajınız</string>
    <string name="gonder_feedback">Gönder</string>
    <string name="e_posta_uzerinden_giris_yapin_login">E-Posta üzerinden giriş yapın</string>
    <string name="e_posta_login">E-Posta</string>
    <string name="sifre_login">Şifre</string>
    <string name="giris_yap_login">Giriş Yap</string>
    <string name="sifremi_unuttum_login">Şifremi unuttum?</string>
    <string name="gizlilik_politikas_ve_kullan_m_ko_ullar_burada_belirtilen_gizlilik_politikas_ve_kullan_m_ko_ullar_furkan_ayaz_n_google_play_store_da_yay_nlanan_b_t_n_mobil_uygulamalar_i_in_ge_erlidir_bu_uygulamalar_mobil_cihaz_n_za_y_kleyerek_bu_metinde_yer_alan_gizlilik_politikas_n_ve_kullan_m_ko_ullar_n_kabul_etmi_say_l_rs_n_z_bu_ko_ullar_kabul_etmiyorsan_z_bu_uygulamalar_mobil_cihaz_n_za_y_klemeyiniz_uygulamalar_m_zda_girilen_veriler_ifreli_sunucularda_sadece_uygulama_y_neticisinin_g_rebilece_i_ekilde_depolan_r_ve_3_ah_s_yada_kurumlar_ile_payla_lmaz_telefon_kullan_m_izinleri_uygulam_m_zdan_bulunan_k_sayol_arama_i_lemi_i_in_gerekli_olan_izinlerin_taraf_n_zdan_sa_lanm_olmas_gerekir_verilen_bu_izin_sadece_uygulamada_kay_tl_olan_m_terilerinizin_k_sayol_aramlar_nda_kullan_lmaktad_r_ve_m_terilerinize_ait_ki_isel_veriler_sadece_size_zel_veritabnlar_nda_ifreli_olarak_saklan_r_nternet_kullan_m_izinleri_uygulam_m_zdan_verilerin_ifreli_sunuculara_g_nderilebilmesi_i_in_gerekli_olan_izindir_ve_kullan_c_lar_n_bunu_tan_mlamas_gerekir_bu_izinler_telefonunuzdan_iste_iniz_d_nda_bir_bilgiyi_transfer_etmek_i_in_kullan_lmaz_verilen_internet_eri_im_izni_sadece_uygulama_i_ersinde_dolduraca_n_z_formlara_ait_veri_ve_foto_raf_transferi_i_in_kullan_lmaktad_r_kamera_kullan_m_mobil_uygulamalar_m_zda_kamera_kullan_m_sadece_uygulama_i_ersinden_g_ndermek_istedi_iniz_foto_raflar_i_in_kullan_lmaktad_r_kullan_c_bilgisi_d_nda_kullan_m_s_z_konusu_de_ildir_mobil_uygulamada_ekilen_foto_raflar_kullan_c_ya_ait_ifreli_ortamda_saklan_r_ve_sadece_kendisinin_ve_ba_l_oldu_u_kurumun_eri_imine_a_kt_r_foto_raflar_3_ah_s_yada_kurumlar_ile_kullan_c_bilgisi_d_nda_payla_lmaz_son_g_ncelleme_tarihi_03_03_2021_privacypolicy">Gizlilik Politikası ve Kullanım Koşulları Burada belirtilen gizlilik politikası ve kullanım koşulları; FURKAN AYAZ\'ın Google Play Store\'da yayınlanan bütün mobil uygulamaları için geçerlidir. Bu uygulamaları mobil cihazınıza yükleyerek, bu metinde yer alan gizlilik politikasını ve kullanım koşullarını kabul etmiş sayılırsınız. Bu koşulları kabul etmiyorsanız bu uygulamaları mobil cihazınıza yüklemeyiniz. Uygulamalarımızda, girilen veriler şifreli sunucularda sadece uygulama yöneticisinin görebileceği şekilde depolanır ve 3. şahıs yada kurumlar ile paylaşılmaz. Telefon kullanım izinleri, uygulamımızdan bulunan kısayol arama işlemi için gerekli olan izinlerin tarafınızdan sağlanmış olması gerekir. Verilen bu izin sadece Uygulamada kayıtlı olan müşterilerinizin kısayol aramlarında kullanılmaktadır ve müşterilerinize ait kişisel veriler sadece size özel veritabnlarında şifreli olarak saklanır. İnternet kullanım izinleri, uygulamımızdan verilerin şifreli sunuculara gönderilebilmesi için gerekli olan izindir ve kullanıcıların bunu tanımlaması gerekir. Bu izinler telefonunuzdan isteğiniz dışında bir bilgiyi transfer etmek için kullanılmaz. Verilen internet erişim izni sadece uygulama içersinde dolduracağınız formlara ait veri ve fotoğraf transferi için kullanılmaktadır. Kamera Kullanımı: Mobil Uygulamalarımızda kamera kullanımı sadece uygulama içersinden göndermek istediğiniz fotoğraflar için kullanılmaktadır. kullanıcı bilgisi dışında kullanımı söz konusu değildir. Mobil uygulamada çekilen fotoğraflar kullanıcıya ait şifreli ortamda saklanır ve sadece kendisinin ve bağlı olduğu kurumun erişimine açıktır. Fotoğraflar 3. şahıs yada kurumlar ile kullanıcı bilgisi dışında paylaşılmaz. Son güncelleme tarihi: 03.03.2021</string>
    <string name="e_posta_uzerinden_giris_yapin_signup">E-Posta üzerinden giriş yapın</string>
    <string name="ad_soyad_signup">Ad Soyad</string>
    <string name="e_posta_signup">E-Posta</string>
    <string name="sifre_signup">Şifre</string>
    <string name="zaten_bir_hesabim_var_signup">Zaten bir hesabım var</string>
    <string name="uye_ol_signup">Üye Ol</string>
    <string name="kategori_subcategory">Kategori</string>
    <string name="kategorisi_gruplari_subcategory">kategorisi grupları</string>
    <string name="bu_s_zle_menin_konusu_hizmet_sekt_r_nde_faaliyet_g_steren_groupspad_in_mobil_uygulama_da_mevcut_olan_ve_ileride_kullan_c_ya_sunulacak_t_m_r_n_i_erik_ve_hizmet_e_ili_kin_olarak_furkan_ayaz_n_ve_kullan_c_lar_n_hak_ve_y_k_ml_l_kleri_ile_bu_r_n_ve_hizmetlerden_yararlanma_artlar_n_n_d_zenlemesidir_kullan_c_bu_s_zle_me_h_k_mlerini_kabul_etmekle_mobil_uygulama_i_inde_yer_alan_kullan_ma_yeli_e_ve_hizmetlere_ili_kin_bu_taraf_ndan_a_klanan_ko_ullar_kabul_etmi_olmakta_bu_ko_ullara_uygun_olarak_hareket_edece_ini_taahh_t_etmekte_ve_verece_i_bilgilerin_mobil_uygulama_da_yer_alan_hizmet_lerin_sunulmas_nda_kullan_laca_n_kabul_ve_beyan_etmektedir_useragreement">İşbu Sözleşmenin konusu, hizmet sektöründe faaliyet gösteren GroupsPad’ in, Mobil Uygulama’ da mevcut olan ve ileride Kullanıcı’ ya sunulacak tüm ürün, içerik ve hizmet’ e ilişkin olarak Furkan Ayaz’ ın ve Kullanıcı’ ların hak ve yükümlülükleri ile bu ürün ve hizmetlerden yararlanma şartlarının düzenlemesidir. Kullanıcı İşbu Sözleşme hükümlerini kabul etmekle, Mobil Uygulama içinde yer alan kullanıma, üyeliğe ve hizmetlere ilişkin İşbu tarafından açıklanan koşulları kabul etmiş olmakta, bu koşullara uygun olarak hareket edeceğini taahhüt etmekte ve vereceği bilgilerin, Mobil Uygulama’ da yer alan Hizmet’ lerin sunulmasında kullanılacağını kabul ve beyan etmektedir.</string>
    <string name="e_posta_adresinizi_giriniz_forgotpassword">E-Posta adresinizi giriniz</string>
    <string name="son_eklenenler_category">Son Eklenenler</string>
    <string name="yelerimizin_en_son_ekledi_i_gruplar_g_r_category">Üyelerimizin en son eklediği grupları gör!</string>
    <string name="group_name_group">Group Name</string>
    <string name="uygulama_group">Uygulama:</string>
    <string name="yerle_tirilme_tarihi_24_02_2021_group">Yerleştirilme tarihi: 24/02/2021</string>
    <string name="turkiye_group">Türkiye</string>
    <string name="group_description_group">Group Description</string>
    <string name="notification_title_notification">NOTIFICATION TITLE</string>
    <string name="this_is_a_notification_area_notification">This is a notification area.</string>
    <string name="_2021_03_09_18_57_32_notification">2021-03-09 18:57:32</string>
    <string name="grup_ekle_addgroup">Grup Ekle</string>
    <string name="grup_kategorisi_sec_addgroup">GRUP KATEGORİSİ SEÇ</string>
    <string name="grup_ismini_giriniz_addgroup">Grup ismini giriniz</string>
    <string name="grup_aciklamasini_giriniz_addgroup">Grup açıklamasını giriniz</string>
    <string name="grup_linkini_giriniz_addgroup">Grup linkini giriniz</string>
    <string name="olustur_addgroup">OLUŞTUR</string>
    <string name="senin_icin_kategorilerimiz_categories">Senin için kategorilerimiz</string>
    <string name="kategoriler_categories">Kategoriler</string>
    <string name="seni_aramizda_goremiyoruz_explore">Seni aramızda göremiyoruz!</string>
    <string name="hosgeldiniz_explore">Hoşgeldiniz,</string>
    <string name="uye_ol_explore">Üye ol</string>
    <string name="hesabim_manageaccount">Hesabım</string>
    <string name="giris_yap_manageaccount">Giriş yap</string>
    <string name="uye_ol_manageaccount">Üye ol</string>
    <string name="cikis_manageaccount">Çıkış</string>
    <string name="gruplarim_manageaccount">Gruplarım</string>
    <string name="gruplarimi_sil_manageaccount">Gruplarımı sil</string>
    <string name="iletisim_manageaccount">İletişim</string>
    <string name="uygulamayi_degerlendir_manageaccount">Uygulamayı değerlendir</string>
    <string name="geri_bildirim_manageaccount">Geri bildirim</string>
    <string name="sosyal_medya_manageaccount">Sosyal Medya</string>
    <string name="uygulama_ayarlari_settings">Uygulama Ayarları</string>
    <string name="bildirimler_settings">Bildirimler</string>
    <string name="grup_kat_l_mlar_nda_bildirim_al_rs_n_z_settings">Grup katılımlarında bildirim alırsınız.</string>
    <string name="ulke_settings">Ülke</string>
    <string name="kendi_lkenin_veya_t_m_lkelerin_gruplar_n_g_r_settings">Kendi ülkenin veya tüm ülkelerin gruplarını gör.</string>
    <string name="ye_olmayan_kullan_c_lar_t_m_lkeleri_g_rebilirler_settings">(Üye olmayan kullanıcılar tüm ülkeleri görebilirler.)</string>
    <string name="versiyon_settings">Versiyon</string>
    <string name="uygulama_hakkinda_settings">Uygulama Hakkında</string>
    <string name="kullan_c_s_zle_mesi_settings">Kullanıcı Sözleşmesi</string>
    <string name="gizlilik_politikas_settings">Gizlilik Politikası</string>
    <string name="groupspad_hakkinda_settings">GroupsPad Hakkında</string>
    <string name="hesabim_bottom">Hesabım</string>
    <string name="kategoriler_bottom">Kategoriler</string>
    <string name="kesfet_bottom">Keşfet</string>
    <string name="grup_ekle_bottom">Grup Ekle</string>
    <string name="ayarlar_bottom">Ayarlar</string>
    <string name="sil_groupmenu">Sil</string>
</resources>